[tool.poetry]
name = "rstblog"
version = "0.1.0"
description = ""
authors = ["Kevin Cuzner <kevincuzner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = {extras = ["async"], version = "^2.0.1"}
docutils = "^0.17.1"
toml = "^0.10.2"
celery = {extras = ["redis"], version = "^5.1.2"}
Pygments = "^2.10.0"
Jinja2 = "^3.0.3"
gunicorn = "^21.2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
reqires = ["poetry>=1.0"]
build.backend = "poetry.masonry.api"

